--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   <style>
     .new-shiny { background: #aaaaaa; }
   </style>
-  <script src='big.js'></script>
+  <!--    <script src='big.js'></script>    -->
   <script src='highlight.js'></script>
   <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body class='dark'>
-
+  
+  <!--    
 <div>
 <ul>
 <li>↔: Go back/forward</li>
@@ -22,7 +23,8 @@
 <li>P: Printer mode</li>
 </ul>
 </div>
-
+    -->
+  
 <div>
 <p>Getting artistic inspiration from technology</p>
 <br/>
